application-testing-resiliency-demo/fault-injection-demo/virtual-service-inject-abort-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-abort-delay-injection
  namespace: demo
  labels:
    demoMeshResource: "true"
    policyResource: "true"
spec:
  hosts:
    - demo-app
  http:
    - route:
        - destination:
            host: demo-app.demo.svc.cluster.local
            subset: v1
      fault:
        abort:
          percentage:
            value: 50
            # Some 400<=HttpStatusCode
          httpStatus: 400
        delay:
          percentage:
            value: 20
          fixedDelay: 7s
