application-testing-resiliency-demo/fault-injection-demo/virtual-service-inject-abort-promil.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-abort-injection
  namespace: demo-test
spec:
  hosts:
    - demo-app.demo-test.svc.cluster.local
  http:
    - match:
        - sourceLabels:
            app: demo-app
      route:
        - destination:
            host: demo-app.demo-test.svc.cluster.local
            subset: v1
      fault:
        abort:
          percentage:
            value: 0.1
            # Some 400<=HttpStatusCode
          httpStatus: 400
